# Chomsky

./: .buildinfo  .gitignore  00-author.html  00-preface.html  01-introduction.html  01-stemming.html  02-electromagneticfield.html  02-lemming.html  03-abs.html  03-flatearthproven.html  README.md  genindex.html  intro.html  markdown-notebooks.html  notebooks.html  objects.inv  pyproject.toml  requirements.in  requirements.txt  search.html  searchindex.js
.github/workflows/: build-chomsky-yml  build-docs.yml  pdf.yml
_sources/: 00-preface.ipynb  01-stemming.ipynb  02-electromagneticfield.ipynb  02-lemming.ipynb  03-abs.ipynb  03-flatearthproven.ipynb  intro.md  markdown-notebooks.ipynb
docs/: 00-author.ipynb  01-stemming.ipynb  02-lemming.ipynb  03-flatearthproven.ipynb  _config.yml  _toc.yml  intro.md  landing.ipynb  notebooks.ipynb  references.bib
docs/_build/.doctrees/: 00-author.doctree  01-introduction.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  notebooks.doctree
docs/_build/html/: .buildinfo  genindex.html  intro.html  notebooks.html  objects.inv  search.html
docs/_build/html/_sources/: 00-author.ipynb  01-introduction.ipynb  markdown-notebooks.ipynb
docs/_build/jupyter_execute/: 00-author.ipynb  01-introduction.ipynb  notebooks.ipynb
