[project]
name = "Chomsyk"
version = "0.1.0"
description = "Lemmas and Stemmas"
authors = [
    { name="ConstCorrectness", email="horrible.cpp.guru@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "fonttools==4.59.0",
  "kiwisolver==1.4.8",
  "matplotlib==3.10.3",
  "numpy==2.2.6",
  "packaging==25.0",
  "pandas==2.3.1",
  "pillow==11.3.0",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "seaborn==0.13.2",
  "six==1.17.0",
  "tzdata==2025.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

